<resources>
    <string name="app_name">LetsPay行動錢包</string>
    <string name="title_activity_welcome">台新銀行</string>
    <string name="register">註冊開始使用LetsPay行動錢包</string>
    <string name="login">登入</string>
    <string name="reset_login">重新登入</string>
    <string name="finished">完成</string>
    <string name="dialog_title">訊息</string>
    <string name="progress_dialog_title">訊息</string>
    <string name="loading">Loading...</string>
    <string name="msg_no_available_network">目前無網路連線，請稍候再試。</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="dialog_app_update_msg">最新版本：%1$s\n%2$s</string>
    <string name="dialog_app_update_button_update">更新</string>
    <string name="welcome_format">歡迎頁 %1$d</string>
    <string name="welcome_title">歡迎來到LetsPay行動錢包</string>
    <string name="welcome_subtitle">個人化、方便快速且充滿趣味的紅包功能。</string>
    <string name="welcome_title_1">LetsPay - 您的行動生活錢包</string>
    <string name="welcome_subtitle_1">透過信用卡或儲值帳戶，在手機上就能夠輕鬆轉帳、分攤付款、還能在LETSPAY線上商店購物！</string>
    <string name="welcome_title_2">便利簡單的條碼付款</string>
    <string name="welcome_subtitle_2">不需要現金，也不需要信用卡，透過手機顯示付款條碼，就能在指定的店家輕鬆消費購物。</string>
    <string name="login_userid">身份證號碼</string>
    <string name="login_password">密碼</string>
    <string name="characters_number_capital_only">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="characters_number_letter_only">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="register_next">下一步</string>
    <string name="register_login_password">請輸入錢包登入密碼</string>
    <string name="register_password_hint">請輸入英數六碼</string>
    <string name="register_check_password">請再次輸入</string>
    <string name="register_finished">完成註冊</string>
    <string name="register_nickname">如何稱呼您</string>
    <string name="register_nickname_hint">請輸入您的稱呼</string>
    <string name="button_confirm">確認</string>
    <string name="drawer_item_pay">儲值帳戶付款</string>
    <string name="drawer_item_receivables">儲值帳戶收款</string>
    <string name="drawer_item_deposit_withdraw">儲值/提領</string>
    <string name="drawer_item_only_credit_card">信用卡付款</string>
    <string name="drawer_item_earn_sale">輸入優惠代碼</string>
    <string name="drawer_item_news_feed">動態訊息中心</string>
    <string name="drawer_item_system_message">系統訊息</string>
    <string name="drawer_item_settings">設定</string>
    <string name="sv_login_failed_msg">很抱歉！目前無法登入儲值帳戶，可能是您的使用者名稱或是密碼發生問題。\n請直接撥打客服專線：02-26553355\n我們將立即為您處理。</string>
    <string name="sv_login_back_to_home">返回首頁</string>
    <string name="sv_login_re_login">重新登入</string>
    <string name="register_treaty_checkbox_1_page1">我瞭解並同意Lets Pay行動錢包服務條款，且聲明已於合理期間(至少五日)審閱完畢</string>
    <string name="register_treaty_checkbox_2_page1">我已清楚瞭解個人資料保護之法定告知事項</string>
    <string name="register_treaty_content">歡迎使用台新國際商業銀行(下稱本銀行)之「LETSPAY行動錢包服務」(下稱本服務)平台所提供之服務。\n當使用者勾選「同意」時，即視為使用者已充分審閱、瞭解及同意本服務條款，開始使用服務，並同意遵守服務條款之約定 (2016.07版)。\n服務說明\n1.	本服務為本銀行經營、管理及提供。使用者於使用本服務前，請務必詳細審閱並決定是否同意遵守本服務條款。當使用者勾選「同意」時，即視為使用者已充分閱讀、瞭解並同意遵守本服務條款。若使用者不同意任一項服務條款，請勿啟用本服務。\n2.	本銀行有權隨時修改或變更本服務條款，若使用者於本服務條款修改或變更後，繼續使用本服務者，視同使用者同意並接受該服務條款之修改或變更。\n基於上述充分認知，使用者同意使用本服務，並遵守以下約定：\n服務內容與費用\n1.	本服務為一適用於行動終端裝置上之應用服務，使用者需先下載「LETSPAY行動錢包服務」APP軟體(以下簡稱本服務APP軟體)方可使用。\n2.	本服務主要係提供使用者行動支付等服務。詳細服務內容及功能以本服務APP實際提供為準，且本銀行有權隨時增減或變更各項服務內容及功能。\n3.	本服務APP軟體可免費下載，使用本服務APP軟體之一般功能，無須支付使用費。惟使用者若係透過各家電信業者提供之電信系統網路或需收費之Wi-Fi網路使用本服務，需依使用者向其所屬電信業者申請之電信服務上網/數據資費費率，額外計算傳輸費，並自行支付傳輸費予電信業者；若使用者於國外透過國內電信業者連結國外當地之電信網路使用本服務，使用者使用國際數據漫遊費之費用另計。\n4.	本服務現行所提供之儲值支付帳戶網路交易代收代付、轉帳以及信用卡交易等功能，悉依儲值支付帳戶、信用卡相關約定條款規定辦理。\n申請流程\n1.	本服務係提供行動支付之服務系統(下稱「本服務系統」)，使用者可透過智慧型行動終端設備(如：智慧型手機)，下載安裝本服務APP軟體。註冊會員時，使用者需輸入身分證字號、行動電話門號、電子郵件，並設定密碼，其中身分證字號、行動電話門號、電子郵件，係為供本銀行進行本服務後續會員管理及會員身分認證服務之用，本服務系統將以OTP方式進行驗證，驗證無誤後，即完成本服務會員之註冊作業。若使用者擬更換本服務所綁定之行動電話門號或電子郵件時，可於本服務APP軟體更改行動電話門號或電子郵件。\n\n信用卡功能\n1.使用者預設信用卡為支付工具，而於本服務APP軟體新增信用卡時，使用者需輸入擬新增之信用卡資訊（例如信用卡號、信用卡有效月年、信用卡安全檢核碼末3碼），經本行確認信用卡之有效性。另本服務將通過使用者所持信用卡之發卡行進行3D驗證，以確認為您本人所使用。\n2.使用者新增之信用卡，待本服務完成信用卡驗證無誤後，本次新增之信用卡即完成預設作業，使用者可開始使用本服務之信用卡支付功能。\n3.使用者於本服務系統上新增信用卡之相關資訊，均加密傳輸，並謹依照支付卡產業資料安全標準(Payment Card Industry Data Security Standard，PCI DSS)保留於本服務系統。\n4. 使用者每次使用本服務APP軟體進行支付前，均須輸入信用卡交易(錢包)密碼(即您所設定的錢包登入密碼)，供本服務系統驗證、確認透過本服務所使用之信用卡消費所支付之款項，為使用者所為。\n5. 使用者透過本服務以約定之信用卡支付交易款項者，無須使用簽帳單、當場簽名或另立書面契約，使用者同意並保證日後不得以該筆信用卡交易款項未經使用者本人簽名為由，拒絕支付該筆交易款項。如使用者於本服務系統上註冊、新增約定之信用卡因掛失、偽冒、停用等原因失效時，該張信用卡即無法於本服務系統進行任何消費、交易服務。\n6. 本服務限使用者本人使用，不得轉讓、質借或提供他人占有或使用；若使用者違反前揭規定，所生之糾紛或損失，概由使用者自行負責。\n7. 使用者不得有任何複製或改作本服務之行為；一經發現，本銀行得報請有關機關追究相關法律責任，並得請求使用者賠償本銀行或其他第三人所受之損失。\n8. 使用者透過智慧型行動終端設備使用本服務進行交易消費款項之支付時，限制如下： 使用者使用本服務認證該信用卡後，限於該張信用卡之發卡行核定之信用額度內使用，惟該發卡行就該筆交易授權保有准駁與否之權利。\n9. 使用者使用本服務，除應妥善保管本服務信用卡交易(錢包)密碼外，並應不定期變更本服務信用卡交易(錢包)密碼，以維護本服務使用安全性。\n10.本銀行為積極有效維護使用者權益，當使用者輸入本服務信用卡交易(錢包)密碼，連續錯誤超過4次時，本服務將自動鎖定，內建之信用卡資料將被刪除且由系統強制登出本服務APP軟體，使用者需致電客服解除鎖定、並重新登入，始可使用本服務，使用者亦須重新新增信用卡並進行3D驗證；若使用者將密碼遺失或忘記密碼時，請透過本服務APP軟體之忘記密碼功能，進行密碼重設作業。 \n11.使用者若係因使用信用卡所衍生之相關問題，請逕洽該張信用卡之發卡行(信用卡背面24小時服務專線)。\n12.本銀行將於使用者所指示之每筆交易處理完畢後，由本服務系統畫面將呈現交易訊息結果通知或智慧型行動終端設備交易介面所示之消費記錄或其他方式通知使用者，使用者應核對其交易內容之正確性。\n13.另本銀行亦提供使用者於本服務APP軟體查詢交易記錄，交易紀錄將於本服務APP軟體保存本月與上月共兩個月查詢期間。\n14.使用者若對透過本服務所完成之指示交易消費帳款有疑義時，請洽詢交易商家或逕洽發卡行(信用卡背面24小時服務專線)。\n15.使用者使用本服務進行消費支付，應自行仔細檢核個人或商家所輸入之資訊。\n16.倘因使用者或商家端之輸入或操作錯誤導致該筆交易款項支付錯誤時，請立即洽商家修正該筆錯誤交易。\n17.使用者透過本服務已完成之交易若需進行退款，需依商家之退款政策與流程進行退款，有關退款作業請逕洽商家，以處理退款。\n18.本銀行並未介入商品、服務之交付、買賣或商品、服務瑕疵等之實體法律關係，相關商品退貨或服務取消之退款等事宜，持卡人應先洽商家或商品、服務之製造商或提供商尋求解決。\n本銀行訊息效力\n1.	本銀行與使用者間同意以電子訊息、電子文件作為表示方法，為本服務之使用、提供所交換之電子訊息、電子文件，效力與書面文件相同。\n2.	本銀行及使用者同意以「金融機構辦理電子銀行業務安全控管作業基準」所訂之安全規範，作為使用者身分識別與同意本服務條款之依據，無須另行簽名或蓋章。\n智慧財產權\n1.	本服務使用之商標（包括但不限於名稱、商標及標誌）及內容（包括但不限於所有軟體、文字、圖片、影音及其他一切內容），其所有權、智慧財產權及其他一切權利皆為台新國際商業銀行或相關合法權利人所有，概受著作權法、其他智慧財產權法令及其他中華民國及國際法令之保護。\n使用者責任與義務\n1.	本服務僅供使用者個人正常合法使用，使用者不得轉售或以任何方式轉讓予他人使用。\n2.	未經本銀行事前書面同意，使用者不得對本服務之內容、商標及本服務APP軟體之全部或一部擅自進行出售、交易、轉售、轉授權、重製、傳輸、散佈、修改、改作、連結、進行還原工程、解編、反向組譯、製作衍生著作或以其他任何形式、基於任何目的加以使用、出版或發行之行為。使用者若違反前述責任與義務，導致本銀行或任何第三人之損害者，應負擔賠償責任。\n3.	使用者提供予本銀行或本服務之文字、圖片及其他一切內容應確保依法享有相關權利(包括但不限於肖像權、著作權、姓名權等)，且絕無侵害第三人智慧財產權或其他權利之情事。\n4.	使用者同意不得進行下列行為：\n・	違反法律、法規、行政命令或本銀行、本服務相關業務所屬之主管機關之要求；\n・	以任何方式干擾或破壞本服務軟體及系統；\n・	用於不法交易行為或有任何不當/不合常理之使用行為；\n・	提供虛偽不實之資料或冒用他人個人資料；\n・	違反本服務條款之規定。\n賠償\n1.	使用者若違反法律、法規、行政命令或本銀行、本服務相關業務所屬之主管機關之要求、或以任何方式干擾或破壞本服務APP軟體或本銀行系統、或用於不法交易行為或有任何不當、不合常理之使用行為、或提供虛偽不實之資料或冒用他人個人資料之情形者，本銀行得不經通知逕行限制或終止使用者使用本服務帳戶權限，並終止使用者使用本服務之權利(含日後拒絕使用者申請本服務)，使用者不得因此要求任何補償或賠償。\n2.	使用者提供予本銀行或本服務之文字、圖片及其他一切內容遭主管機關或第三人主張違反法令規定、侵害其權益或請求損害賠償，使用者應負責解決之，並應確保本銀行不受任何損害。本銀行得因此等糾紛，不經通知逕行限制或終止使用者使用本服務帳戶權限，並終止使用者使用本服務之權利(含日後拒絕使用者申請本服務)。\n3.	如上述兩點事宜，導致本銀行、關係企業、受雇人、代理人、合作業者及履行輔助人等，受有損害或支出費用(包括但不限於因進行民事、刑事及行政訴訟程序所支出之訴訟費用及律師費)時，使用者應負損害賠償責任。\n\n使用者資料之使用及授權\n1.	使用者應提供完整、詳實且符合真實之個人資料，若資料嗣後有變更、異動時，應隨時依本銀行規定更新。\n2.	若使用者所提供之個人資料填寫不實、原先提供之資料已不符真實而未更新者，本銀行有權隨時終止使用者使用本銀行之部份或全部之權利。\n3.	本銀行就使用者所提供之個人資料(包括但不限於姓名、地址、電話號碼、使用者名稱、帳號、密碼、電子郵件地址、信用卡資料及其他依法受保護之個人資料等)將依法妥善維護，使用者瞭解並同意本銀行就使用者所提供之個人資料得蒐集及處理之，並得於使用者/會員管理及檔案維護、行銷、廣告宣傳、調查分析統計、提供本服務及相關服務等目的範圍內傳遞及利用使用者之個人資料。\n使用者規範及擔保\n1.	使用者使用本服務前，應詳閱本服務條款及相關說明，以瞭解與本服務系統相容之軟硬體設備規格。使用者並應自行備妥因使用本服務所需之相關設備，並自行負擔相關設備連結有線、無線或行動網際網路之衍生費用(如傳輸費)。\n2.	使用者應自行確認所使用之軟硬體設備，基本即具有連結行動通信與數據網路、收發文字簡訊、多媒體訊息或網址簡訊等功能；若因使用者所使用之軟硬體設備不具備前述功能，本銀行不保證服務得予提供，亦不負擔服務提供或品質之義務。\n3.	使用者有義務妥善保管申請/使用本服務時所填寫的帳號及密碼等資料(使用者實際應填寫之資料以本服務平台之檢核機制為主)，並為帳號/密碼登入本服務後所進行之一切行為負責。為維護使用者權益，請勿將上述資料洩露或提供予第三人知悉、或出借或轉讓他人使用。\n4.	若使用者發現上述資料遭人非法使用或有任何異常破壞使用安全之情形時，應立即通知本銀行客服專線(電話：02-2655-3355)。\n5.	若因以下原因造成使用者權益受損，本銀行不負任何法律或賠償責任：\n・	使用者未妥善保管本服務帳號、密碼。\n・	使用者自行將本服務帳號、密碼提供與他人。\n・	使用者未使用本服務所提供的帳號安全機制。\n・	其他因使用者之故意或重大過失所致之事由。\n6.	本銀行有權決定是否受理使用者申請本服務，亦有權決定或隨時變更本服務之申請資格。\n服務更新\n1.	為有效提供本服務，本銀行得隨時要求使用者自動下載與安裝更新之本服務之軟體、程式，以利使用者繼續使用本服務；若使用者不同意或未更新，本銀行有權終止或限制使用者，使用本服務之權利，且無須對使用者或第三人負擔任何責任。\n服務停止或中斷\n1.	若發生下列情形，本銀行有權不經通知使用者逕行停止或中止服務之提供，且不負任何法律責任：\n・	對本服務系統、相關軟硬體設備或電子通信設備緊急保養、維護、升級或施工時；\n・	發生突發性之系統/設備故障時；\n・	因所連結本服務之通訊相關通信服務，中斷、停止，導致服務無法提供時；\n・	本服務因天災等不可抗力之因素致無法提供時。\n品質擔保及責任限制\n1.	本銀行不保證本服務運作時不會發生中斷、延遲或錯誤等情形，某些情形可能會影響使用者的通訊品質以及本服務之使用狀況，並可能導致通訊中斷或延遲。因此，使用者瞭解並同意於使用本服務時，應自行採取防護措施。\n2.	因上述情事致使用者無法使用本服務而衍生任何直接或間接之損害時，本銀行不負任何賠償責任。\n服務終止\n1.	若發生特定情形或使用者有違反本服務條款情事者，本銀行有權不經催告逕行終止本服務之提供，或限制使用者使用本服務之權利。\n2.	前項所稱之特定情形，包括但不限於本銀行營業政策之調整，停止本服務之提供、依法律/法令/法院/主管機關之命令，或本服務發生無法繼續或無法預期之技術或安全因素或問題等。於前揭情形，本銀行對使用者或任何第三人均不負擔任何責任。\n服務轉讓\n1.	使用者不得轉讓本服務之任何權利或義務。\n2.	本銀行可將本服務之權利或義務轉讓予第三人，或委由第三人處理，且無須事先通知使用者。\n其他使用條款和條件\n1.	本銀行得隨時公布、張貼或傳送本服務之其他使用規範、條件或說明等，該等使用規範、條件或說明等亦視為本服務條款之一部分，使用者亦同意遵守之。\n準據法與管轄\n1.	本服務條款適用中華民國相關法律，若因本服務條款或本服務之使用而涉訟者，雙方同意以臺灣臺北地方法院為第一審管轄法院。\n連結至其他合法網站\n本銀行於本服務相關介面上所提供之連結，可能連結至其他個人、公司、或組織之網站，提供該等連結之目的，僅係為便利使用者自行搜集或取得資訊，本銀行對於被連結之該等個人、公司、或組織之網站上所提供之產品、服務、或資訊，不擔保其真實性、完整性、即時性、可信賴性，該連結亦不得因此而被視為本銀行與該等被連結網站或網頁上之資訊內容或活動有任何關連或合意，該等個人、公司、或組織亦不因此而與本銀行有任何僱佣、委任、代理、合夥或其他類似之關係。使用者瀏覽或使用此類第三方網站或內容，應自行承擔風險，並建議使用者詳閱該被連結網站之使用條款與隱私權政策。若使用者因瀏覽或使用該等網站或其內容致生任何損害或損失，本銀行概不負責。\n\n台新金融控股公司及各子公司客戶資料保密措施 -2016/03/21\n台新金融控股股份有限公司於民國九十一年二月十八日成立，旗下涵蓋銀行、證券、投信等子公司，提供客戶一次購足(one-stop shopping)之產品與服務。台新金融控股股份有限公司及各子公司將秉持過去各子公司對客戶資料嚴密保護之做法，採取必要之保密措施，以維護您所提供資料之安全性。茲將台新金融控股股份有限公司及各子公司之客戶資料保密措施說明如下： \n\n台新金融控股股份有限公司及各子公司之客戶資料保密措施，除依據金融控股公司法、金融控股公司子公司間共同行銷管理辦法（下稱共同行銷管理辦法）、個人資料保護法以及主管機關之相關法令辦理外，各子公司亦將同時遵循其他相關法令(包括但不限於銀行法第四十八條第二項等)之規定，善盡客戶資料保密之職責。\n\n一、客戶資料變更修改方式\n您的個人資料有變動時，可以隨時通知台新金融控股股份有限公司之各子公司之客戶服務中心，請求更正或補充之。\n\n二、客戶行使退出選擇權方式\n您可以隨時通知台新金融控股股份有限公司之各子公司之客戶服務中心，停止交互運用您的個人資料進行行銷或業務推廣行為。\n\n台新金融控股股份有限公司及各子公司保有修訂保密措施之權利，並將於網站或以其他主管機關認定公開揭露之管道公告揭露保密措施相關訊息，修訂時亦同；若您有其他與保密措施相關之問題，亦可隨時洽詢台新金融控股股份有限公司或各子公司。\n\n台新金融控股股份有限公司目前所屬之各子公司，包括：\n台新國際商業銀行股份有限公司\n台新綜合證券股份有限公司\n台新證券投資顧問股份有限公司\n台新證券投資信託股份有限公司\n台新資產管理股份有限公司\n台新創業投資股份有限公司\n台新大安租賃股份有限公司\n\n台新金融控股股份有限公司之子公司未來如有新增或異動者，將於台新金融控股股份有限公司及其各子公司之網站揭露公告之。\n\n台新國際商業銀行 個人資料保護之法定告知事項【201603】\n親愛的客戶您好，由於個人資料之蒐集，涉及您的隱私權益，台新國際商業銀行股份有限公司(以下簡稱本行)向您蒐集個人資料時，依據個人資料保護法（以下簡稱「個資法」）第8條第1項規定，應明確告知您下列事項：(一)非公務機關名稱、(二)蒐集之目的、(三)個人資料之類別、(四)個人資料利用之期間、地區、對象及方式、(五)當事人依個人資料保護法第3條規定得行使之權利及方式、(六)當事人得自由選擇提供個人資料時，不提供將對其權益之影響。\n一、	本行蒐集您個人資料之特定目的如下：\n036存款與匯款業務、040行銷、044投資管理、059金融服務業依法令規定及金融監理需要，所為之蒐集處理及利用、060金融爭議處理、063非公務機關依法定義務所進行個人資料之蒐集處理及利用、067信用卡、轉帳卡或電子票證業務、068信託業務、069契約、類似契約或其他法律關係管理之事務、082借款戶與存款戶存借作業綜合管理、090消費者、客戶管理與服務、091消費者保護、104帳務管理及債權交易業務、136資(通)訊及資料庫管理、154徵信、157調查、統計與研究分析、181其他經營合於營業登記項目或組織章程所定之業務、182其他諮詢與顧問服務，以及美國海外帳戶稅收遵循法及跨政府協議之遵循。\n二、	本行蒐集您的個人資料類別，如您的姓名、身分證統一編號暨換補領資料(例如身分證字號、換補領日期、換補領代碼、換補領地點、證件上有無列印相片)、出生年月日、通訊電話、聯絡方式等及其他詳如您在本行「LETSPAY行動錢包」（下稱「本APP」）、本行官方網頁或相關連結之網頁填寫之內容，並以本行與客戶往來之相關業務、帳戶、或服務，及自您或第三人處(例如：財團法人金融聯合徵信中心、您往來之商店、交易平台等)所實際蒐集之個人資料為準。\n三、	本行將您的個人資料為利用之期間、地區、對象及方式：\n(一)、	期間：\n1.	特定目的存續期間。\n2.	依相關法令所定(例如商業會計法等)或因執行業務所必須之保存期間或依個別契約就資料之保存所定之保存年限(以期限最長者為準)。\n(二)、	地區：\n以下第(三)點所列之利用對象，其國內及國外所在地。\n(三)、	對象：\n1.	本行(含受本行委託處理事務之委外機構)。\n2.	依法令規定利用之機構(例如：本行所屬金融控股公司等)。\n3.	其他業務相關之機構(例如：財團法人金融聯合徵信中心、臺灣票據交換所、財金資訊股份有限公司、信用保證機構、信用卡國際組織、收單機構暨特約商店等)。\n4.	依法有權機關或金融監理機關。\n5.	您所同意之對象(例如本行共同行銷或交互運用客戶資料之公司、與本行合作推廣業務之公司等)。\n6.	與我國政府簽訂條約、協議之外國政府機構。\n(四)、	方式：符合個人資料保護相關法令以自動化機器或其他非自動化之利用方式。\n四、	依據個人資料保護法第3條規定，您就本行保有您的個人資料，得行使下列權利：\n(一)、	除有個人資料保護法第10條所規定之例外情形外，得向本行查詢、請求閱覽或請求製給複製本，惟本行依個人資料保護法第14條規定，得酌收必要成本費用。\n(二)、	得向本行請求補充或更正個人資料，惟依個人資料保護法施行細則第19條規定，您應適當釋明其原因及事實。\n(三)、	本行如有違反個人資料保護法規定蒐集、處理或利用您的個人資料，依個人資料保護法第11條第4項規定，您得向本行請求停止蒐集您的個人資料。\n(四)、	依個人資料保護法第11條第2項規定，個人資料正確性有爭議者，得向本行請求停止處理或利用您的個人資料。惟依該項但書規定，本行因執行業務所必須並註明其爭議或經您書面同意者，不在此限。\n(五)、	依個人資料保護法第11條第3項規定，個人資料蒐集之特定目的消失或期限屆滿時，得向本行請求刪除、停止處理或利用您的個人資料。惟依該項但書規定，本行因執行業務所必須或經您書面同意者，不在此限。\n五、	您如欲行使上述個人資料保護法第3條規定之各項權利，有關如何行使之方式，您得向本行客服專線(0800-023-123或02-26553355)或於本行網址(www.taishinbank.com.tw)查詢。\n六、	您得自由選擇是否提供相關個人資料及類別，惟您所拒絕提供之個人資料及類別，如果是辦理業務審核或作業所需之資料，將影響本行進行必要之業務審核或作業而無法提供您相關服務或依美國海外帳戶稅收遵循法可能將您於本行之帳戶列為不合作帳戶（Recalcitrant Account），敬請見諒。\n</string>
    <string name="edit_personal_phone_title">手機號碼</string>
    <string name="userinfo_change_userid">請輸入您的身份證號碼</string>
    <string name="userinfo_change_password">請輸入您錢包登入密碼</string>
    <string name="forgot_password">忘記密碼</string>
</resources>