<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- 分隔線上面的項目 -->
    <group android:id="@+id/group_account"
        android:checkableBehavior="single"
        >

        <item android:id="@+id/nav_deposit_withdraw"
            android:title="@string/drawer_item_deposit_withdraw" android:icon="@drawable/ic_menu_deposit_withdraw"/>
        <item android:id="@+id/nav_pay"
            android:title="@string/drawer_item_pay" android:icon="@drawable/ic_menu_pay"/>
        <item android:id="@+id/nav_receivables"
            android:title="@string/drawer_item_receivables" android:icon="@drawable/ic_menu_receivables"/>
        <item android:id="@+id/nav_only_credit_card"
            android:title="@string/drawer_item_only_credit_card" android:icon="@drawable/ic_menu_only_credit_card"/>
        <item android:id="@+id/nav_earn_sale"
            android:title="@string/drawer_item_earn_sale" android:icon="@drawable/ic_menu_earn_sale"/>
    </group>

    <!-- 分隔線下面的項目 -->
    <group android:id="@+id/group_settings"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_news_feed"
            android:title="@string/drawer_item_news_feed" android:icon="@drawable/ic_menu_news_feed"/>
        <item android:id="@+id/nav_system_message"
            android:title="@string/drawer_item_system_message" android:icon="@drawable/ic_menu_system_message"/>
        <item android:id="@+id/nav_settings"
            android:title="@string/drawer_item_settings" android:icon="@drawable/ic_setting" />
   </group>
</menu>