<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".controller.setting.UserInfoChangeCertificationActivity">

    <!-- 上方客製的toolbar -->
    <include layout="@layout/appbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- 上方的標題 -->
        <include layout="@layout/headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/headline_vertical_margin"
            android:layout_marginBottom="@dimen/headline_vertical_margin"
            android:id="@+id/headline" />

        <!-- 分隔線 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_divider_height"
            android:background="@color/content_divider"
            android:layout_marginBottom="@dimen/top_margin" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- 身份證號碼 -->
            <!-- 標題 -->
            <TextView
                style="@style/FieldTitle"
                android:text="@string/userinfo_change_userid"
                android:layout_alignParentTop="true"
                android:id="@+id/text_userid"/>
            <!-- 輸入框 -->
            <EditText
                android:id="@+id/edit_userid"
                style="@style/CommonEditText"
                android:maxLength="@integer/userid_maxlength"
                android:textAllCaps="true"
                android:inputType="textEmailAddress|textCapCharacters"
                android:digits="@string/characters_number_capital_only"
                android:layout_below="@id/text_userid" />
            <!-- 錯誤訊息 -->
            <TextView
                android:id="@+id/text_userid_error"
                style="@style/FieldError"
                android:layout_alignTop="@id/edit_userid"
                android:visibility="gone" />

            <TextView
                style="@style/FieldTitle"
                android:text="@string/userinfo_change_password"
                android:id="@+id/text_password"
                android:layout_below="@id/edit_userid"/>
            <!-- 輸入框 -->
            <EditText
                android:id="@+id/edit_password"
                style="@style/CommonEditText"
                android:maxLength="@integer/password_wallet_maxlength"
                android:inputType="textPassword"
                android:digits="@string/characters_number_letter_only"
                android:layout_below="@id/text_password"
                android:hint="@string/register_password_hint"/>
            <!-- 錯誤訊息 -->
            <TextView
                android:id="@+id/text_password_error"
                style="@style/FieldError"
                android:layout_alignTop="@id/edit_password"
                android:visibility="gone" />


            <!-- 確認按鈕 -->
            <Button
                android:id="@+id/button_confirm"
                android:text="@string/button_confirm"
                style="@style/CommonButtonWithBackground"
                android:layout_marginTop="@dimen/button_first_margin_top"
                android:layout_marginBottom="@dimen/button_login_register_margin"
                android:layout_below="@id/edit_password"/>

        </RelativeLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
