<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tw.com.taishinbank.ewallet.controller.RegisterFragment3_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- 上方的標題 -->
        <include layout="@layout/headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/headline_vertical_margin"
            android:layout_marginBottom="@dimen/headline_vertical_margin"
            android:id="@+id/headline" />

        <!-- 分隔線 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_divider_height"
            android:background="@color/content_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- 輸入密碼 -->
            <!-- 標題 -->
            <TextView
                style="@style/FieldTitle"
                android:text="@string/register_login_password"
                android:layout_alignParentTop="true"
                android:id="@+id/text_password"/>
            <!-- 輸入框 -->
            <EditText
                android:id="@+id/edit_password"
                style="@style/CommonEditText"
                android:maxLength="@integer/password_wallet_maxlength"
                android:inputType="textPassword"
                android:digits="@string/characters_number_letter_only"
                android:layout_below="@id/text_password"
                android:hint="@string/register_password_hint"/>
            <!-- 錯誤訊息 -->
            <TextView
                android:id="@+id/text_password_error"
                style="@style/FieldError"
                android:layout_alignTop="@id/edit_password"
                android:visibility="gone" />

            <!-- 再次輸入密碼 -->
            <!-- 標題 -->
            <TextView
                style="@style/FieldTitle"
                android:text="@string/register_check_password"
                android:layout_below="@id/edit_password"
                android:id="@+id/text_password_again"/>
            <!-- 輸入框 -->
            <EditText
                android:id="@+id/edit_password_again"
                style="@style/CommonEditText"
                android:inputType="textPassword"
                android:digits="@string/characters_number_letter_only"
                android:maxLength="@integer/password_wallet_maxlength"
                android:layout_below="@id/text_password_again"/>
            <!-- 錯誤訊息 -->
            <TextView
                android:id="@+id/text_password_again_error"
                style="@style/FieldError"
                android:layout_alignTop="@id/edit_password_again"
                android:visibility="gone" />

            <!--  完成註冊按鈕 -->
            <Button
                android:id="@+id/button_finish"
                android:text="@string/register_finished"
                style="@style/CommonButtonWithBackground"
                android:layout_marginTop="@dimen/button_first_margin_top"
                android:layout_below="@id/edit_password_again"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>