<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fitsSystemWindows="true" tools:context="tw.com.taishinbank.ewallet.controller.LoginActivity">

    <!-- 上方客製的toolbar -->
    <include layout="@layout/appbar"/>

    <!-- 頁面內容 -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <!-- 上方的標題 -->
            <include layout="@layout/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/headline_vertical_margin"
                android:layout_marginBottom="@dimen/headline_vertical_margin"
                android:id="@+id/headline"/>

            <!-- 分隔線 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/content_divider_height"
                android:background="@color/content_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <!-- 身份證號碼 -->
                <!-- 標題 -->
                <TextView
                    android:id="@+id/text_userid"
                    android:layout_alignParentTop="true"
                    style="@style/FieldTitle"
                    android:text="@string/login_userid" />
                <!-- 輸入框 -->
                <EditText
                    android:id="@+id/edit_userid"
                    style="@style/CommonEditText"
                    android:maxLength="@integer/userid_maxlength"
                    android:textAllCaps="true"
                    android:digits="@string/characters_number_capital_only"
                    android:inputType="textEmailAddress|textCapCharacters"
                    android:layout_below="@id/text_userid"/>
                <!-- 錯誤訊息 -->
                <TextView
                    android:id="@+id/text_userid_error"
                    style="@style/FieldError"
                    android:layout_alignTop="@id/edit_userid"
                    android:visibility="gone"  />

                <!-- 手機號碼 -->
                <!-- 標題 -->
                <TextView
                    style="@style/FieldTitle"
                    android:text="@string/edit_personal_phone_title"
                    android:layout_below="@id/edit_userid"
                    android:id="@+id/text_cellphone"/>
                <!-- 輸入框 -->
                <EditText
                    android:id="@+id/edit_cellphone"
                    style="@style/CommonEditText"
                    android:inputType="number"
                    android:maxLength="@integer/cellphone_maxlength"
                    android:layout_below="@id/text_cellphone"/>
                <!-- 錯誤訊息 -->
                <TextView
                    android:id="@+id/text_cellphone_error"
                    style="@style/FieldError"
                    android:layout_alignTop="@id/edit_cellphone"
                    android:visibility="gone" />

                <!-- 密碼 -->
                <!-- 標題 -->
                <TextView
                    android:id="@+id/text_password"
                    style="@style/FieldTitle"
                    android:text="@string/login_password"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/edit_cellphone"/>
                <!-- 輸入框 -->
                <EditText
                    android:id="@+id/edit_password"
                    style="@style/CommonEditText"
                    android:maxLength="@integer/password_wallet_maxlength"
                    android:digits="@string/characters_number_letter_only"
                    android:inputType="textPassword"
                    android:layout_below="@id/text_password"/>
                <!-- 錯誤訊息 -->
                <TextView
                    android:id="@+id/text_password_error"
                    style="@style/FieldError"
                    android:layout_alignTop="@id/edit_password"
                    android:visibility="gone"  />

            </RelativeLayout>

            <!-- 登入按鈕 -->
            <include
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/button_login"
                layout="@layout/btn_login" />

            <!-- 最下方的註冊按鈕 -->
            <Button
                android:id="@+id/button_register"
                android:text="@string/register"
                style="@style/CommonButtonWithBackground"/>

            <!-- 忘記密碼按鈕 -->
            <Button
                android:id="@+id/button_forgot_password"
                android:text="@string/forgot_password"
                style="@style/CommonButtonNoBackground"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/ic_credit_card_question_g"
                android:drawablePadding="6dp"/>
        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
