<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!-- 內容 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- 訊息內容 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_message"
            android:autoLink="all"
            android:textColorLink="@color/colorPrimary"
            android:textColor="@color/colorGrayPrimaryDark"
            android:text="@string/sv_login_failed_msg"
            android:textSize="@dimen/text_size_normal"/>

        <!-- 下方按鈕 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dialog_padding_bottom"
            android:id="@+id/button_bar">

            <Button
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_dialog_red_envelope_gray"
                android:layout_marginRight="13dp"
                android:textColor="@color/button_text_color"
                android:text="@string/sv_login_back_to_home"
                android:id="@+id/button_left"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_dialog_red_envelope"
                android:textColor="@color/button_text_color"
                android:text="@string/sv_login_re_login"
                android:id="@+id/button_right"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>