<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tw.com.taishinbank.ewallet.controller.RegisterFragment3_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- 上方的標題 -->
        <include layout="@layout/headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/headline_vertical_margin"
            android:layout_marginBottom="@dimen/headline_vertical_margin"
            android:id="@+id/headline" />

        <!-- 分隔線 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_divider_height"
            android:background="@color/content_divider"
            android:layout_marginBottom="@dimen/headline_vertical_margin" />

        <!-- 設定圖像 -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_pickImage"
            android:layout_gravity="center_horizontal"
            android:background="?android:selectableItemBackground"
            android:clickable="true">
            <ImageView
                android:layout_width="@dimen/photo_size"
                android:layout_height="@dimen/photo_size"
                android:background="@drawable/img_default_avatar"
                android:layout_marginRight="16dp"
                android:layout_gravity="top|left"
                android:id="@+id/image_photo"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_avatar_camera"
                android:layout_gravity="right|bottom"/>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- 設定稱呼 -->
            <!-- 標題 -->
            <TextView
                style="@style/FieldTitle"
                android:text="@string/register_nickname"
                android:id="@+id/text_nickname"
                android:layout_alignParentTop="true"/>
            <!-- 輸入框 -->
            <EditText
                android:id="@+id/edit_nickname"
                style="@style/CommonEditText"
                android:hint="@string/register_nickname_hint"
                android:layout_below="@id/text_nickname"/>
            <!-- 錯誤訊息 -->
            <TextView
                android:id="@+id/text_nickname_error"
                style="@style/FieldError"
                android:layout_alignTop="@id/edit_nickname"
                android:visibility="gone" />

            <!--  確認按鈕 -->
            <Button
                android:id="@+id/button_ok"
                android:text="@string/button_confirm"
                style="@style/CommonButtonWithBackground"
                android:layout_marginTop="@dimen/button_first_margin_top"
                android:layout_below="@id/edit_nickname"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>